modules/gdscript/tests/scripts/runtime/errors/division_by_zero.gd
func test():
	var integer: int = 1
	integer /= 0
